@@ -1,6 +1,6 @@
 #ifndef _VERSION_H_
 #define _VERSION_H_
 
-#define ROCKSTAR_VERSION "0.99.9-RC2+"
+#define ROCKSTAR_VERSION "0.99.9-RC3"
 
 #endif /* _VERSION_H_ */
